--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -54,5 +54,5 @@ api-gateway:
   image:
     tag: 0.51.2
   service:
-    type: LoadBalancer
-    loadBalancerIP: 127.0.0.1
+    type: NodePort
+    #loadBalancerIP: 127.0.0.1
